# momoapi-python

./: AUTHORS.md  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml
src/mtnmomo/: __main__.py  cli.py  client.py  collection.py  config.py  disbursement.py  errors.py  remittance.py  utils.py
tests/integration/: test_collection.py  test_disbursement.py  test_remittance.py  test_sandbox.py
tests/integration/features/: disbursements.feature
tests/unitests/: test_collection.py  test_disbursement.py  test_remittance.py  utils.py
